feat: 랭킹 조회 Redis 기반으로 변경 및 EXTERNAL_SUPPORT 부스 제외